--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,6 @@
 		}
 	}
 ,
-"typescript.check.workspaceVersion": false
+"typescript.check.workspaceVersion": false,
+"vsicons.presets.angular": true
 }
